--- a/templates/activitytree/program.html
+++ b/templates/activitytree/program.html
@@ -316,9 +316,9 @@ $(document).ready(function() {
                           for (var i=0; i<result.errors.length; ++i)
                             $( "#result_panel_body").append("<p class='test_error'> Error: "+ result.errors[i]+"</p>" );
                           for (var i=0; i<result.failures.length; ++i)
-                            $( "#result_panel_body").append("<p class='test_failure'>Falló la prueba: "+ result.failures[i].split(" ")[0]+"</p>" );
+                            $( "#result_panel_body").append("<p class='test_failure'>Falló la prueba: "+ result.failures[i]+"</p>" );
                           for (var i=0; i<result.successes.length; ++i)
-                            $( "#result_panel_body").append("<p class='test_success'>Pasó la prueba: "+ result.successes[i].split(" ")[0]+"</p>" );
+                            $( "#result_panel_body").append("<p class='test_success'>Pasó la prueba: "+ result.successes[i]+"</p>" );
 
                         if (typeof result.stdout != 'undefined'  &&  result.stdout != "\n" )
                         {
