--- a/templates/activitytree/video.html
+++ b/templates/activitytree/video.html
@@ -17,7 +17,7 @@
         <div class="col-md-3">
             <div class="row">
 
-                <form id="nav_form"   role="form" action="{{root}}" method = "POST">{% csrf_token %}
+                <form id="nav_form"   role="form" action="/{{ root_id }}{{root}}" method = "POST">{% csrf_token %}
 
 
                    <ul class="pager">
