--- a/templates/activitytree/program.html
+++ b/templates/activitytree/program.html
@@ -102,9 +102,11 @@
 
 
 </div>
+
+    {% if XML_NAV %}
  <div class="row">
 
-         <form id="nav_form"   role="form" action="{{root}}" method = "POST">{% csrf_token %}
+         <form id="nav_form"   role="form" action="{{ root_id }}{{root}}" method = "POST">{% csrf_token %}
 
 
                <ul class="pager">
@@ -116,6 +118,7 @@
 
 
     </div>
+  {% endif %}
 
  <!-- Keyboard & Mouse Dynamics
  <button onclick="report()">Reporte Keystrokes</button>
