--- a/templates/activitytree/container.html
+++ b/templates/activitytree/container.html
@@ -16,7 +16,7 @@
 
     <div class="row">
 
-         <form id="nav_form"   role="form" action="/{{ root_id }}{{root}}" method = "POST">{% csrf_token %}
+         <form id="nav_form"   role="form" action="{{ root_id }}{{root}}" method = "POST">{% csrf_token %}
 
 
                <ul class="pager">
