--- a/templates/activitytree/video.html
+++ b/templates/activitytree/video.html
@@ -4,14 +4,7 @@
 {% block content %}
 
    <div class = "row">
-        <div class="col-md-9">
-                <div class="video">
-                    <div id="player">
 
-                    </div>
-
-                </div>
-        </div>
         <div class="col-md-3">
             <div class="row">
 
@@ -35,6 +28,10 @@
                       <h3 class="panel-title">{{ video.title }}</h3>
                     </div>
 
+                      <div class="panel-body">
+                            Panel content
+                      </div>
+
 
                 </div>
 
@@ -42,18 +39,20 @@
 
 
     </div>
-   </div>
-   <div class = "row">
-   <div class="col-md-7">
-                      <h4>{{ video.title }}</h4>
 
-   </div>
-   <div class="col-md-2">
-         <div id="rating-info">
+
+           <div class="col-md-9">
+                <div class="video">
+                    <div id="player">
 
                     </div>
 
-   </div>
+                </div>
+
+               <div id="rating-info">
+
+                    </div>
+        </div>
 
    </div>
 
