--- a/templates/activitytree/activity.html
+++ b/templates/activitytree/activity.html
@@ -13,7 +13,7 @@
 
     <div class="row">
 
-         <form id="nav_form"   role="form" action="{{root}}" method = "POST">{% csrf_token %}
+         <form id="nav_form"   role="form" action="{{ root_id }}{{root}}" method = "POST">{% csrf_token %}
 
 
                <ul class="pager">
