--- a/templates/activitytree/base.html
+++ b/templates/activitytree/base.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" type="text/css" href="http://netdna.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.css">
     <link rel="stylesheet" type="text/css" href="{{MEDIA_URL}}css/bootstrap-social.css" title="social stylesheet" />
+    <link rel="stylesheet" htype="text/css" ref="//code.jquery.com/qunit/qunit-1.18.0.css">
     <!-- Custom styles for this template -->
 
     <!-- Custom styles for this template -->
@@ -97,44 +98,7 @@ code {
   }
 }
 
-/* Sidebar navigation
 
-
-.nav-sidebar {
-  margin-right: -21px;
-  margin-bottom: 20px;
-  margin-left: -20px;
-}
-.nav-sidebar > li > a {
-  padding-right: 20px;
-  padding-left: 20px;
-}
-.nav-sidebar > .active > a {
-  color: #fff;
-  background-color: #428bca;
-  margin-top: -10px;
-
-}
-
-.nav > li {
-    display: block;
-    font-size: 14px;
-    line-height: 15px;
-    position: relative;
-}
-
-li.nav-header {
-    color: #999999;
-    display: block;
-    font-size: 11px;
-    font-weight: bold;
-    line-height: 20px;
-    padding: 3px 15px;
-    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
-    text-transform: uppercase;
-    margin-top: 15px;
-
-}*/
 
 /*
  * Main content
@@ -173,91 +137,7 @@ li.nav-header {
   border-radius: 50%;
 }
 
-/*
-#navlist ul {
-    list-style: none outside none;
-     padding-left: 20px;
-}
 
-#navlist li {
-    background-repeat: no-repeat;
-    font-size: 12px;
-    padding-left: 20px;
-
-}
-
-
-#navlist {
-    list-style: none outside none;
-    margin-left: 0;
-    padding-left: 0;
-}
-
-#navcontainer {
-    font-weight: normal;
-}
-
-
-
-.container_satisfied {
-    background-image: url("{{MEDIA_URL}}images/lullacons/folder-open-green.png");
-    background-position: left top;
-    padding-bottom: 5px;
-    padding-top: 4px;
-}
-
-.container_notSatisfied {
-    background-image: url("{{MEDIA_URL}}images/lullacons/folder-open-blue.png");
-    background-position: left top;
-    padding-top: 3px;
-}
-
-.cont_disabled
-{
-padding-left: 10px;
-background-image: url({{MEDIA_URL}}images/lullacons/folder-option-denied.png);
-background-position: 0 .4em;
-}
-
-.activity_notSatisfied {
-    background-image: url("{{MEDIA_URL}}images/lullacons/doc-plain-red.png");
-    background-position: left top;
-    color: #FF0000;
-    padding-bottom: 5px;
-    padding-left: 20px;
-
-}
-
-.activity_satisfied {
-    background-image: url("{{MEDIA_URL}}images/lullacons/doc-plain-green.png");
-    background-position: left top;
-    color: #FF0000;
-    padding-bottom: 5px;
-    padding-left: 15px;
-
-}
-.activity_disabled
-{
-padding-left: 15px;
-background-image: url({{MEDIA_URL}}images/lullacons/folder-option-denied.png);
-background-position:  left top;
-}
-
-.activity_enabled
-{
-padding-left: 15px;
-background-image: url({{MEDIA_URL}}images/lullacons/doc-plain-white.png);
-background-position: left top;
-}
-
-.activity_current {
-    background-image: url("{{MEDIA_URL}}images/lullacons/arrow-double-right-green.png");
-    background-position:left top;
-    padding-left: 10px;
-    padding-bottom: 5px;
-    font-weight: bold;
-
-}*/
 
 
 .video {
@@ -277,8 +157,7 @@ background-position: left top;
     height: 100%;
 }
 
-
-        #panel_col{
+     #panel_col{
       margin-top: 50px;
         }
 .second-navbar{
