programjs. new program quiz in javascript

--- a/templates/activitytree/base.html
+++ b/templates/activitytree/base.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" type="text/css" href="http://netdna.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.css">
     <link rel="stylesheet" type="text/css" href="{{MEDIA_URL}}css/bootstrap-social.css" title="social stylesheet" />
-    <link rel="stylesheet" htype="text/css" ref="//code.jquery.com/qunit/qunit-1.18.0.css">
+    <link rel="stylesheet" type="text/css" href="//code.jquery.com/qunit/qunit-1.18.0.css">
     <!-- Custom styles for this template -->
 
     <!-- Custom styles for this template -->
